--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -37,5 +37,6 @@
 	"spanish": "Spanish",
 	"german": "German",
 	"welcomeAdmin": "Welcome, Admin",
-	"loginSubtitleAdmin": "Enter your admin credentials to access the dashboard"
+	"loginSubtitleAdmin": "Enter your admin credentials to access the dashboard",
+	"sair": "Logout"
 }
